testdata/baselines/reference/submodule/compiler/missingCloseBraceInObjectLiteral.errors.txt
missingCloseBraceInObjectLiteral.ts(5,1): error TS1005: '}' expected.


==== missingCloseBraceInObjectLiteral.ts (1 errors) ====
    var foo = {
        a: 'a',
        b: 'b',
        c: 'c'
    
    
!!! error TS1005: '}' expected.
!!! related TS1007: The parser expected to find a '}' to match the '{' token here.